Fix up footer spacing

--- a/assets/css/layout/footer.less
+++ b/assets/css/layout/footer.less
@@ -30,10 +30,14 @@
 
   .about, .footer-links {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
 
   .footer-links {
+
+    ul {
+      margin-bottom: 1.5rem;
+    }
 
     li {
       margin-bottom: .25rem;
